--- a/components/component.html
+++ b/components/component.html
@@ -5,7 +5,7 @@
     <title>Component</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" type="text/css" href="../css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 
 </head>
 
@@ -14,7 +14,7 @@
     <div id="component">
         <div class="row wrapper">
             <div class="col-md-4 col-lg-3 img-wrapper">
-                <img src="../img/component-img.png" alt="">
+                <img src="img/component-img.png" alt="">
             </div>
             <div class="col-md-8 col-lg-9 content-wrapper">
                 <div class="role-wrapper">
@@ -30,7 +30,7 @@
         </div>
         <div class="options">
             <button>
-                <img src="../img/icons/option.svg" alt="">
+                <img src="img/icons/option.svg" alt="">
             </button>
         </div>
     </div>
